--- a/spec/dummy/client/stylesheets/kitten/_molecules.scss
+++ b/spec/dummy/client/stylesheets/kitten/_molecules.scss
@@ -107,7 +107,7 @@
 
 @include k-Row((
   colors: (
-    light-background: #fafafa,
+    light-background: map-get($k-colors, 'background-2'),
     dark-background: #999,
     light-bottom-border: #eee,
   )
@@ -171,7 +171,7 @@
   line-height: 1.5,
   background-color: map-get($k-colors, 'primary-1'),
   border-color: #5c90ff,
-  color: #b7ceff,
+  color: map-get($k-colors, 'primary-4'),
   color-current: #fff,
   z-index: 50,
 ));
